--- a/ExperimentalSwift/Base.lproj/Main.storyboard
+++ b/ExperimentalSwift/Base.lproj/Main.storyboard
@@ -233,7 +233,7 @@
         <!--RGB LED-->
         <scene sceneID="zUV-fM-aUR">
             <objects>
-                <viewController id="CkR-fd-mQY" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="RGBLedViewController" id="CkR-fd-mQY" customClass="RGBLedViewController" customModule="ExperimentalSwift" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Whp-jA-v7k"/>
                         <viewControllerLayoutGuide type="bottom" id="f3v-kv-Sfa"/>
@@ -242,7 +242,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="L0D-3A-xKc">
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="L0D-3A-xKc">
                                 <rect key="frame" x="24" y="88" width="272" height="329"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="rgb-led-placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="00l-Ib-Eut">
@@ -251,49 +251,65 @@
                                             <constraint firstAttribute="height" constant="200" id="54y-3b-J27"/>
                                         </constraints>
                                     </imageView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bK6-uL-ggh">
-                                        <rect key="frame" x="0.0" y="212" width="272" height="31"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="bK6-uL-ggh">
+                                        <rect key="frame" x="84" y="212" width="104.5" height="31"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Red" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kqe-vr-oBz" customClass="BasicLabel" customModule="DesignableViews">
-                                                <rect key="frame" x="0.0" y="0.0" width="223" height="31"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="43.5" height="31"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                <nil key="textColor"/>
+                                                <color key="textColor" red="1" green="0.44300454890000002" blue="0.3333091326" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="ChK-HE-kht">
-                                                <rect key="frame" x="223" y="0.0" width="51" height="31"/>
+                                                <rect key="frame" x="55.5" y="0.0" width="51" height="31"/>
+                                                <color key="onTintColor" red="1" green="0.44300454890000002" blue="0.3333091326" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <connections>
+                                                    <action selector="redSwitchValueChanged:" destination="CkR-fd-mQY" eventType="valueChanged" id="1GP-IM-7Jb"/>
+                                                </connections>
                                             </switch>
                                         </subviews>
                                     </stackView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vYe-ox-hSF">
-                                        <rect key="frame" x="0.0" y="255" width="272" height="31"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="vYe-ox-hSF">
+                                        <rect key="frame" x="84" y="255" width="104.5" height="31"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Green" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iOG-IO-IQH" customClass="BasicLabel" customModule="DesignableViews">
-                                                <rect key="frame" x="0.0" y="0.0" width="223" height="31"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="43.5" height="31"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                <nil key="textColor"/>
+                                                <color key="textColor" red="0.5221220628014529" green="1" blue="0.41011645509724282" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="3uZ-vx-hBn">
-                                                <rect key="frame" x="223" y="0.0" width="51" height="31"/>
+                                                <rect key="frame" x="55.5" y="0.0" width="51" height="31"/>
+                                                <color key="onTintColor" red="0.52212206279999995" green="1" blue="0.4101164551" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <connections>
+                                                    <action selector="greenSwitchValueChanged:" destination="CkR-fd-mQY" eventType="valueChanged" id="58c-Ho-stp"/>
+                                                </connections>
                                             </switch>
                                         </subviews>
                                     </stackView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="523-hk-iHx">
-                                        <rect key="frame" x="0.0" y="298" width="272" height="31"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="523-hk-iHx">
+                                        <rect key="frame" x="84" y="298" width="104.5" height="31"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Blue" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1tN-dT-200" customClass="BasicLabel" customModule="DesignableViews">
-                                                <rect key="frame" x="0.0" y="0.0" width="223" height="31"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="43.5" height="31"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                <nil key="textColor"/>
+                                                <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="0QZ-tn-jT7">
-                                                <rect key="frame" x="223" y="0.0" width="51" height="31"/>
+                                                <rect key="frame" x="55.5" y="0.0" width="51" height="31"/>
+                                                <color key="onTintColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                <connections>
+                                                    <action selector="blueSwitchValueChanged:" destination="CkR-fd-mQY" eventType="valueChanged" id="PLx-u1-66S"/>
+                                                </connections>
                                             </switch>
                                         </subviews>
                                     </stackView>
                                 </subviews>
+                                <constraints>
+                                    <constraint firstItem="1tN-dT-200" firstAttribute="width" secondItem="iOG-IO-IQH" secondAttribute="width" id="dUu-HM-MaE"/>
+                                    <constraint firstItem="iOG-IO-IQH" firstAttribute="width" secondItem="kqe-vr-oBz" secondAttribute="width" id="pvj-Uh-O5f"/>
+                                </constraints>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
